# oms-check

./: .gitignore  Cargo.toml
src/: configuration.rs  main.rs
src/setttings/: database_settings.rs  mod.rs  sync_settings.rs
